remove run block from basic plugin