@@ -79,14 +79,6 @@ publishing {
     }
 }
 
-run {
-    minHeapSize = "768m"
-    maxHeapSize = "768m"
-    if(!isJava8Compatible) {
-      jvmArgs "-XX:PermSize=96m", "-XX:MaxPermSize=256m"
-    }
-    jvmArgs "-XX:+TieredCompilation", "-XX:TieredStopAtLevel=1", "-XX:CICompilerCount=3"
-}
 
 task wrapper(type: Wrapper) {
   gradleVersion = gradleWrapperVersion
